--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Lucy Ma</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="https://github.com/Ma-Lucy" target="_blank">Lucy Ma</a> and
+          is <a href="#" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
