added github and netlify links

--- a/index.html
+++ b/index.html
@@ -48,8 +48,19 @@
         <p>
           This project was coded by
           <a href="https://github.com/Ma-Lucy" target="_blank">Lucy Ma</a> and
-          is <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          is
+          <a
+            href="https://github.com/Ma-Lucy/shecodes-weather-project"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://app.netlify.com/sites/shecodes-weather-lucy/overview"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
